# gemini-android-app

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  LICENSE  MIHI.md  POSITIONING.md  PRIVACY.md  README.md  Readme pattern.md  SECURITY.md  build.gradle.kts  esbuild.android.js  package.json  settings.gradle.kts  styles.md  webpage_1776667370843.html
.github/workflows/: android.yml  native.yml  release.yml
agent-bridge/: build.gradle.kts
agent-bridge/src/main/kotlin/com/gemini/agent/: NativeAgent.kt  RustAgentRuntime.kt
agent-bridge/src/main/kotlin/nz/kaimahi/agent/: KaimahiAgentDefaults.kt  NativeAgent.kt  RustAgentRuntime.kt
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/gemini/app/: MainActivity.kt
app/src/main/kotlin/nz/kaimahi/app/: MainActivity.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_launcher_koru.xml  ic_launcher_koru_mono.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: data_extraction_rules.xml
core-bridge/: build.gradle.kts
core-bridge/src/main/kotlin/com/gemini/bridge/: DriverRouter.kt  QuickJSGeminiCore.kt  RestGeminiCore.kt  SensitivityClassifier.kt
core-bridge/src/main/kotlin/nz/kaimahi/bridge/: CloudGeminiBackend.kt  DriverRouter.kt  RestGeminiCore.kt  SensitivityClassifier.kt
core-bridge/src/test/kotlin/com/gemini/bridge/: DriverRouterTest.kt  SensitivityClassifierTest.kt
data/: build.gradle.kts
docs/: AGENTIC.md  API.md  BRAND.md  PORTING.md  PRE-MERGE-REVIEW.md  README.md  SCAFFOLDING.md  SCREENS.md  STYLES.md  dynamic-screens.md
docs/design/: Kaimahi Android Frames.html  Kaimahi Light & Variants.html  frame-memory-splash-about.jsx  frame-shell.jsx  frame-todo-chat.jsx  frame-variants.jsx  kaimahi.css  marks.jsx
docs/futures/: agent-runtime-wiring.md  emdash-rs-sovereignty.md  internal-rename-gemini-to-kaimahi.md  memory-store-jni.md  roleplay-rooms.md  sd-endpoint.md  shop-deployer.md  swarm-workers.md
docs/research/: daily-front-page.md
docs/screenshots/: README.md
domain/: build.gradle.kts
domain/src/main/kotlin/com/gemini/domain/: AgentRuntime.kt  Attachment.kt  ChatRoom.kt  DeploymentConfig.kt  GeminiCore.kt  InferenceEngine.kt  Persona.kt  ToolTypes.kt  TraceEvent.kt
domain/src/main/kotlin/nz/kaimahi/domain/: AgentRuntime.kt  Attachment.kt  ChatRoom.kt  DeploymentConfig.kt  GeminiCore.kt  Hint.kt  InferenceBackend.kt  InferenceEngine.kt  Persona.kt  ToolTypes.kt  TraceEvent.kt
domain/src/test/kotlin/nz/kaimahi/domain/: MultiBackendTest.kt
emdash-bridge/: build.gradle.kts
emdash-bridge/src/main/kotlin/com/gemini/emdash/: NativeEmdash.kt  RustEmdashClient.kt
emdash-bridge/src/main/kotlin/nz/kaimahi/emdash/: NativeEmdash.kt  RustEmdashClient.kt
fr/: README.md
gradle/: libs.versions.toml
inference-bridge/: build.gradle.kts
inference-bridge/src/main/kotlin/com/gemini/inference/: NativeInference.kt  RustInferenceEngine.kt
inference-bridge/src/main/kotlin/nz/kaimahi/inference/: LocalLmBackend.kt  NativeInference.kt  RustInferenceEngine.kt
native/: Cargo.toml  README.md  openapi.yaml  rust-toolchain.toml
native-driver/: build.gradle.kts
native-driver/src/main/kotlin/com/gemini/localdriver/: Gemma4LocalCore.kt
native/agent-core/: Cargo.toml
native/agent-core/src/: lib.rs  memory.rs  multi.rs  training.rs
native/diagnostics/: Cargo.toml
native/diagnostics/src/: lib.rs
native/emdash-client/: Cargo.toml
native/emdash-client/src/: lib.rs
native/emdash-core/: Cargo.toml
native/emdash-core/src/: context.rs  lib.rs  portable_text.rs  schema.rs  traits.rs
native/gguf-loader/: Cargo.toml
native/gguf-loader/src/: lib.rs
native/jni-shim/: Cargo.toml
native/jni-shim/src/: lib.rs  sessions.rs
native/local-server/: Cargo.toml
native/local-server/src/: lib.rs
native/mmap/: Cargo.toml
native/mmap/src/: lib.rs
native/model-runtime/: Cargo.toml
native/model-runtime/benches/: forward_throughput.rs
native/model-runtime/examples/: forward_throughput.rs
native/model-runtime/src/: arch.rs  host.rs  kv.rs  lib.rs  tokenizer.rs
native/model-runtime/src/arch/: diffusion.rs  gemma4.rs  lm.rs
native/model-runtime/src/arch/diffusion/: custom.rs  stable_diffusion.rs
native/model-runtime/src/arch/lm/: custom.rs  gemma4.rs  llama3.rs
native/telemetry/: Cargo.toml
native/telemetry/src/: lib.rs
native/tensor-core/: Cargo.toml
native/tensor-core/src/: delegate.rs  half.rs  isa.rs  kernels.rs  lib.rs  quant.rs  sched.rs
native/tensor-core/src/kernels/: attention.rs  matmul.rs  rmsnorm.rs  rope.rs  softmax.rs  swiglu.rs
native/tensor-core/src/quant/: q4_0.rs  q4_k.rs  q6_k.rs  q8_0.rs
rust/: .gitignore  Cargo.toml
rust/.cargo/: config.toml
rust/crates/gemma4-audio/: Cargo.toml
rust/crates/gemma4-audio/src/: lib.rs
rust/crates/gemma4-core/: Cargo.toml
rust/crates/gemma4-core/src/: alloc.rs  dtype.rs  lib.rs  mmap.rs  safetensors.rs  tensor.rs
rust/crates/gemma4-driver/: Cargo.toml
rust/crates/gemma4-driver/src/: lib.rs
rust/crates/gemma4-jni/: Cargo.toml
rust/crates/gemma4-jni/src/: jni_types.rs  lib.rs  wire.rs
rust/crates/gemma4-model/: Cargo.toml
rust/crates/gemma4-model/src/: block.rs  config.rs  kv_cache.rs  lib.rs  loader.rs  weights.rs
rust/crates/gemma4-ops/: Cargo.toml
rust/crates/gemma4-ops/src/: attention.rs  lib.rs  matmul.rs  parity.rs  rmsnorm.rs  rope.rs  sampler.rs  softmax.rs  swiglu.rs
rust/crates/gemma4-quant/: Cargo.toml
rust/crates/gemma4-quant/src/: lib.rs
rust/crates/gemma4-tokenizer/: Cargo.toml
rust/crates/gemma4-tokenizer/src/: lib.rs
rust/crates/gemma4-vision/: Cargo.toml
rust/crates/gemma4-vision/src/: lib.rs
rust/parity-fixtures/: README.md
rust/scripts/: gen_fixtures.py
ui-components/: build.gradle.kts
(+121 files in other folders)
