[workspace]
resolver = "2"
members = [
    "tensor-core",
    "gguf-loader",
    "model-runtime",
    "agent-core",
    "emdash-core",
    "emdash-client",
    "telemetry",
    "diagnostics",
    "local-server",
    "jni-shim",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.75"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 0
