[workspace]
resolver = "2"
# Members are added as their skeletons land. Empty paths are not allowed.
members = [
    "crates/gemma4-core",
    "crates/gemma4-ops",
]

# Workspace lints + profile. Every member crate forbids external dependencies
# (only path-deps on sibling crates are allowed) so the inference engine ships
# with zero third-party code — the math is exclusively ours.
[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release-android]
inherits = "release"
# Smaller binary for shipping per-ABI .so files into the APK.
opt-level = "s"
