[package]
name = "local-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
model-runtime = { path = "../model-runtime" }
agent-core = { path = "../agent-core" }
emdash-client = { path = "../emdash-client" }
telemetry = { path = "../telemetry" }
