[package]
name = "gemma4-jni"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
gemma4-core = { path = "../gemma4-core" }
gemma4-ops = { path = "../gemma4-ops" }
gemma4-model = { path = "../gemma4-model" }

[lib]
name = "gemma4"
crate-type = ["cdylib", "staticlib"]
path = "src/lib.rs"

[lints]
workspace = true
